[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "bin/day1.rs"
name = "day1"

[[bin]]
path = "bin/day2.rs"
name = "day2"

[[bin]]
path = "bin/day3.rs"
name = "day3"

[[bin]]
path = "bin/day4.rs"
name = "day4"

[[bin]]
path = "bin/day5.rs"
name = "day5"

[[bin]]
path = "bin/day6.rs"
name = "day6"

[[bin]]
path = "bin/day7.rs"
name = "day7"